[metadata]
name = pyppl
version = 0.0.0
author = OpenPPL
author_email = openppl.ai@hotmail.com
description = python APIs for OpenPPL projects
url = https://github.com/openppl-public
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: Apache License, Version 2.0
Operating System :: GNU/Linux

[options]
packages = find:
python_requires = >=3.5
include_package_data = True
